@@ -1893,8 +1893,8 @@ outBitC (operand * result)
 static void
 toBoolean (operand * oper)
 {
-  int size = AOP_SIZE (oper) - 1;
-  int offset = 1;
+  int  size = AOP_SIZE (oper) - 1;
+  int  offset = 1;
   bool AccUsed = FALSE;
   bool pushedB;
 
@@ -1946,7 +1946,8 @@ toCarry (operand * oper)
     }
   else if (AOP_TYPE (oper) == AOP_CRY)
     {
-      emitcode ("mov", "c,%s", oper->aop->aopu.aop_dir);
+      if (!IS_OP_ACCUSE (oper))
+        emitcode ("mov", "c,%s", oper->aop->aopu.aop_dir);
     }
   else
     {
@@ -4250,9 +4251,9 @@ jumpret:
      if the next is not the return statement */
   if (!(ic->next && ic->next->op == LABEL &&
         IC_LABEL (ic->next) == returnLabel))
-
-    emitcode ("ljmp", "%05d$", (returnLabel->key + 100));
-
+    {
+      emitcode ("ljmp", "%05d$", (returnLabel->key + 100));
+    }
 }
 
 /*-----------------------------------------------------------------*/
@@ -6512,21 +6513,21 @@ genCmpEq (iCode * ic, iCode * ifx)
     }
   else
     {
-      if (AOP_TYPE (result) == AOP_CRY && AOP_SIZE (result))
+      bool useCarry = (AOP_TYPE (result) == AOP_CRY);
+      gencjne (left, right, newiTempLabel (NULL), useCarry);
+      if (useCarry && AOP_SIZE (result))
         {
-          gencjne (left, right, newiTempLabel (NULL), TRUE);
           aopPut (result, "c", 0);
           goto release;
         }
-      gencjne (left, right, newiTempLabel (NULL), FALSE);
       if (ifx)
         {
-          genIfxJump (ifx, "a", left, right, result, popIc);
+          genIfxJump (ifx, useCarry ? "c" : "a", left, right, result, popIc);
           goto release;
         }
       /* if the result is used in an arithmetic operation
          then put the result in place */
-      if (AOP_TYPE (result) != AOP_CRY)
+      if (!useCarry)
         outAcc (result);
       /* leave the result in acc */
     }
@@ -6819,15 +6820,16 @@ genAnd (iCode * ic, iCode * ifx)
     }
 
   /* if right is bit then exchange them */
-  if (AOP_TYPE (right) == AOP_CRY &&
-      AOP_TYPE (left) != AOP_CRY)
+  if (AOP_TYPE (right) == AOP_CRY && AOP_TYPE (left) != AOP_CRY)
     {
       operand *tmp = right;
       right = left;
       left = tmp;
     }
   if (AOP_TYPE (right) == AOP_LIT)
-    lit = ulFromVal (AOP (right)->aopu.aop_lit);
+    {
+      lit = ulFromVal (AOP (right)->aopu.aop_lit);
+    }
 
   size = AOP_SIZE (result);
 
@@ -6868,12 +6870,10 @@ genAnd (iCode * ic, iCode * ifx)
               // c = bit & bit;
               if (IS_OP_ACCUSE (left))
                 {
-                  assert(0);
                   emitcode ("anl", "c,%s", AOP (right)->aopu.aop_dir);
                 }
               else if (IS_OP_ACCUSE (right))
                 {
-                  emitcode ("rrc", "a");
                   emitcode ("anl", "c,%s", AOP (left)->aopu.aop_dir);
                 }
               else
@@ -7254,15 +7254,16 @@ genOr (iCode * ic, iCode * ifx)
     }
 
   /* if right is bit then exchange them */
-  if (AOP_TYPE (right) == AOP_CRY &&
-      AOP_TYPE (left) != AOP_CRY)
+  if (AOP_TYPE (right) == AOP_CRY && AOP_TYPE (left) != AOP_CRY)
     {
       operand *tmp = right;
       right = left;
       left = tmp;
     }
   if (AOP_TYPE (right) == AOP_LIT)
-    lit = ulFromVal (AOP (right)->aopu.aop_lit);
+    {
+      lit = ulFromVal (AOP (right)->aopu.aop_lit);
+    }
 
   size = AOP_SIZE (result);
 
@@ -7301,13 +7302,11 @@ genOr (iCode * ic, iCode * ifx)
               // c = bit | bit;
               if (IS_OP_ACCUSE (left))
                 {
-                  assert(0);
                   emitcode ("orl", "c,%s", AOP (right)->aopu.aop_dir);
                 }
               else if (IS_OP_ACCUSE (right))
                 {
-                  emitcode ("rrc", "a");
-                  emitcode ("anl", "c,%s", AOP (left)->aopu.aop_dir);
+                  emitcode ("orl", "c,%s", AOP (left)->aopu.aop_dir);
                 }
               else
                 {
@@ -7653,15 +7652,16 @@ genXor (iCode * ic, iCode * ifx)
     }
 
   /* if right is bit then exchange them */
-  if (AOP_TYPE (right) == AOP_CRY &&
-      AOP_TYPE (left) != AOP_CRY)
+  if (AOP_TYPE (right) == AOP_CRY && AOP_TYPE (left) != AOP_CRY)
     {
       operand *tmp = right;
       right = left;
       left = tmp;
     }
   if (AOP_TYPE (right) == AOP_LIT)
-    lit = ulFromVal (AOP (right)->aopu.aop_lit);
+    {
+      lit = ulFromVal (AOP (right)->aopu.aop_lit);
+    }
 
   size = AOP_SIZE (result);
 
@@ -7723,7 +7723,6 @@ genXor (iCode * ic, iCode * ifx)
                   operand *tmp = right;
                   right = left;
                   left = tmp;
-                  assert(0);
                 }
               else
                 {
@@ -10291,8 +10290,8 @@ static void
 genPagedPointerGet (operand * left,
                     operand * result,
                     iCode * ic,
-                    iCode *pi,
-                    iCode *ifx)
+                    iCode * pi,
+                    iCode * ifx)
 {
   asmop *aop = NULL;
   regs *preg = NULL;
@@ -10562,7 +10561,7 @@ genCodePointerGet (operand * left,
 /*-----------------------------------------------------------------*/
 static void
 genGenPointerGet (operand * left,
-                  operand * result, iCode * ic, iCode *pi, iCode *ifx)
+                  operand * result, iCode * ic, iCode * pi, iCode * ifx)
 {
   int size, offset;
   char *ifxCond = "a";
@@ -11349,8 +11348,8 @@ genPointerSet (iCode * ic, iCode *pi)
     }
 
   /* special case when cast remat */
-  if (p_type == GPOINTER && IS_SYMOP (result) && OP_SYMBOL(result)->remat &&
-      IS_CAST_ICODE(OP_SYMBOL(result)->rematiCode))
+  if (p_type == GPOINTER && IS_SYMOP (result) && OP_SYMBOL (result)->remat &&
+      IS_CAST_ICODE (OP_SYMBOL (result)->rematiCode))
     {
       result = IC_RIGHT(OP_SYMBOL(result)->rematiCode);
       type = operandType (result);
@@ -11505,8 +11504,8 @@ genAddrOf (iCode * ic)
   if (opIsGptr (IC_RESULT (ic)))
     {
       char buffer[10];
-      SNPRINTF (buffer, sizeof(buffer),
-                "#0x%02x", pointerTypeToGPByte (pointerCode (getSpec (operandType (IC_LEFT (ic)))), NULL, NULL));
+      SNPRINTF (buffer, sizeof(buffer), "#0x%02x",
+                pointerTypeToGPByte (pointerCode (getSpec (operandType (IC_LEFT (ic)))), NULL, NULL));
       aopPut (IC_RESULT (ic), buffer, GPTRSIZE - 1);
     }
 
@@ -11802,13 +11801,16 @@ genCast (iCode * ic)
             }
           else
             {
-              if (SPEC_SCLS (etype) == S_REGISTER) {
-                // let's assume it is a generic pointer
-                p_type = GPOINTER;
-              } else {
-                /* we have to go by the storage class */
-                p_type = PTR_TYPE (SPEC_OCLS (etype));
-              }
+              if (SPEC_SCLS (etype) == S_REGISTER)
+                {
+                  // let's assume it is a generic pointer
+                  p_type = GPOINTER;
+                }
+              else
+                {
+                  /* we have to go by the storage class */
+                  p_type = PTR_TYPE (SPEC_OCLS (etype));
+                }
             }
 
           /* the first two bytes are known */
@@ -11871,10 +11873,12 @@ genCast (iCode * ic)
   /* now depending on the sign of the source && destination */
   size = AOP_SIZE (result) - AOP_SIZE (right);
   /* if unsigned or not an integral type */
-  if (!IS_SPEC (rtype) || SPEC_USIGN (rtype) || AOP_TYPE(right)==AOP_CRY)
+  if (!IS_SPEC (rtype) || SPEC_USIGN (rtype) || AOP_TYPE (right) == AOP_CRY)
     {
       while (size--)
-        aopPut (result, zero, offset++);
+        {
+          aopPut (result, zero, offset++);
+        }
     }
   else
     {
